[package]
name = "twentyfaces"
version = "0.1.0"
authors = ["Karno <karnoroid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2.13", features = ["full"] }
percent-encoding = "2.1"
chrono = "0.4"
hmac = "0.7"
sha-1 = "0.8"
base64 = "0.11"
oauthsign = { git = "https://github.com/karno/oauthsign.git", branch = "develop" }
reqwest = { version = "0.10.3", features = ["json"] }
futures = "0.3.4"
