[package]
name = "twentyfaces"
version = "0.1.0"
authors = ["Karno <karnoroid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
tokio = { version = "*", features = ["full"] }
percent-encoding = "*"
chrono = "*"
hmac = "*"
sha-1 = "*"
base64 = "*"
reqwest = { version = "*", features = ["json"] }
futures = "*"
uuid = {version = "*", features=["v4"] }

# reqwest-oauth1 = { git = "https://github.com/karno/reqwest-oauth1.git" }
reqwest-oauth1 = { path = "../reqwest-oauth1" }
thiserror = "1.0.20"
notify = "4.0.15"
serde_json = "1.0.58"
regex = "1.3.9"
