[package]
name = "twentyfaces"
version = "0.2.0"
authors = ["Karno <karnoroid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.41"
base64 = "*"
chrono = "*"
futures = "*"
hmac = "*"
notify = "4.0.15"
percent-encoding = "*"
regex = "1.3.9"
reqwest = { version = "*", features = ["stream"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.58"
serde_yaml = "*"
sha-1 = "*"
thiserror = "1.0.20"
tokio = { version = "*", features = ["full"] }
tokio-util = "0.7.2"
uuid = { version = "*", features = ["v4"] }
reqwest-oauth1 = "*"
